--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -63,7 +63,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.USER_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v3
@@ -81,4 +81,4 @@ jobs:
           package-type: container
           min-versions-to-keep: 10
           ignore-versions: latest
-          token: ${{ secrets.USER_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
