--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -47,10 +47,10 @@ jobs:
             images: ghcr.io/${{ github.repository }}
             tags: |
               type=ref,event=tag
-              type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
+              type=raw,value=develop-{{sha}}-{{date 'YYYYMMDD-HHmmss' tz='Asia/Singapore'}},enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
             flavor: |
               latest=false
-              
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
