--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -47,7 +47,7 @@ jobs:
             images: ghcr.io/${{ github.repository }}
             tags: |
               type=ref,event=tag
-              type=raw,value=develop-{{sha}}-{{date 'YYYYMMDD-HHmmss' tz='Asia/Singapore'}},enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
+              type=raw,value=develop-{{date 'YYYYMMDD-HHmmss' tz='Asia/Singapore'}}-{{sha}},enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
             flavor: |
               latest=false
 
