--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,21 @@
 {
-    "python.formatting.provider": "black",
     "python.defaultInterpreterPath": ".venv/bin/python",
-    "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true,
-    "python.linting.lintOnSave": true,
-    "python.linting.ignorePatterns": [".venv/**/*.py"],
     "python.testing.pytestEnabled": true,
     "python.envFile": "${workspaceFolder}/.env",
     "[python]": {
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true
-        }
+            "source.organizeImports": true,
+            "source.fixAll": true
+        },
+        "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.linting.mypyEnabled": true,
+    "flake8.args": [
+        "--config=.flake8"
+    ],
+    "flake8.ignorePatterns": [
+        ".venv/**/*.py"
+    ],
+    "mypy-type-checker.preferDaemon": true,
     "jupyter.debugJustMyCode": false
 }
