--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,48 @@
-anyio==3.6.2; python_full_version >= "3.6.2" and python_version >= "3.7"
-asgiref==3.6.0; python_version >= "3.7"
-async-timeout==4.0.2; python_version >= "3.7" and python_version < "4.0"
-attrs==22.2.0; python_version >= "3.7"
-boto3==1.26.50; python_version >= "3.7"
-botocore==1.29.50; python_version >= "3.7"
-certifi==2022.12.7; python_version >= "3.7"
-click==8.1.3; python_version >= "3.7" and python_version < "4.0"
-colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.7.0" and platform_system == "Windows" and python_version < "4.0"
-coverage==7.0.5; python_version >= "3.7"
-exceptiongroup==1.1.0; python_version < "3.11" and python_version >= "3.7"
-fastapi-cprofile==0.0.2
-fastapi-utils==0.2.1; python_version >= "3.6" and python_version < "4.0"
-fastapi==0.89.1; python_version >= "3.7"
-greenlet==2.0.1; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
-h11==0.14.0; python_version >= "3.7"
-hiredis==2.1.1; python_version >= "3.7" and python_version < "4.0"
-httpcore==0.16.3; python_version >= "3.7"
-httpx==0.23.3; python_version >= "3.7"
-idna==3.4; python_version >= "3.7" and python_full_version >= "3.6.2"
-iniconfig==2.0.0; python_version >= "3.7"
-jmespath==1.0.1; python_version >= "3.7"
-more-itertools==8.14.0; python_version >= "3.7" and python_version < "4.0"
-mypy-extensions==0.4.3; python_version >= "3.7"
-mypy==0.991; python_version >= "3.7"
-nats-py==2.2.0; python_version >= "3.7"
-newrelic==8.5.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.7.0")
-packaging==23.0; python_version >= "3.7"
-pluggy==1.0.0; python_version >= "3.7"
-pptree==3.1; python_version >= "3.7" and python_version < "4.0"
-pydantic==1.10.4; python_version >= "3.7" and python_version < "4.0"
-pytest-asyncio==0.20.3; python_version >= "3.7"
-pytest-cov==4.0.0; python_version >= "3.6"
-pytest-mock==3.10.0; python_version >= "3.7"
-pytest==7.2.1; python_version >= "3.7"
-python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-python-multipart==0.0.5
-python-ulid==1.1.0; python_version >= "3.7"
-redis-om==0.1.2; python_version >= "3.7" and python_version < "4.0"
-redis==4.4.2; python_version >= "3.7"
-retrying==1.3.4
-rfc3986==1.5.0; python_version >= "3.7"
-s3transfer==0.6.0; python_version >= "3.7"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-sniffio==1.3.0; python_full_version >= "3.6.2" and python_version >= "3.7"
-sqlalchemy==1.4.46; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
-starlette==0.22.0; python_version >= "3.7" and python_version < "4.0"
-tomli==2.0.1; python_version < "3.11" and python_version >= "3.7" and python_full_version <= "3.11.0a6"
-types-redis==4.4.0.0
-typing-extensions==4.4.0; python_version >= "3.7" and python_version < "3.10"
-urllib3==1.26.14; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
-uvicorn==0.17.6; python_version >= "3.7"
+anyio==3.7.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
+async-timeout==4.0.3 ; python_full_version >= "3.11.1" and python_full_version <= "3.11.2"
+boto3==1.28.68 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+botocore==1.31.68 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+certifi==2023.7.22 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+cffi==1.16.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+click==8.1.7 ; python_full_version >= "3.11.1" and python_version < "4.0"
+colorama==0.4.6 ; python_full_version >= "3.11.1" and python_version < "4.0" and sys_platform == "win32" or python_full_version >= "3.11.1" and python_version < "4.0" and platform_system == "Windows"
+coverage[toml]==7.3.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+cryptography==41.0.4 ; python_full_version >= "3.11.1" and python_version < "4.0"
+fastapi-utils==0.2.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
+fastapi==0.103.2 ; python_full_version >= "3.11.1" and python_version < "4.0"
+greenlet==3.0.0 ; python_full_version >= "3.11.1" and platform_machine == "aarch64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "ppc64le" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "x86_64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "amd64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "AMD64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "win32" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "WIN32" and python_version < "4.0"
+h11==0.14.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+hiredis==2.2.3 ; python_full_version >= "3.11.1" and python_version < "4.0"
+httpcore==0.16.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+httpx==0.23.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+idna==3.4 ; python_full_version >= "3.11.1" and python_version < "4.0"
+iniconfig==2.0.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+jmespath==1.0.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+more-itertools==9.1.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+mypy==0.991 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+nats-py==2.4.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+packaging==23.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pluggy==1.3.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pycparser==2.21 ; python_full_version >= "3.11.1" and python_version < "4.0"
+pydantic==1.10.13 ; python_full_version >= "3.11.1" and python_version < "4.0"
+pytest-asyncio==0.20.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pytest-cov==4.1.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pytest-mock==3.12.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pytest==7.4.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+python-dateutil==2.8.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+python-multipart==0.0.5 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+python-ulid==1.1.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+redis-om==0.2.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
+redis==4.6.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+rfc3986[idna2008]==1.5.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+s3transfer==0.7.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+six==1.16.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+sniffio==1.3.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+sqlalchemy==1.4.49 ; python_full_version >= "3.11.1" and python_version < "4.0"
+starlette==0.27.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+types-pyopenssl==23.2.0.2 ; python_full_version >= "3.11.1" and python_version < "4.0"
+types-redis==4.6.0.7 ; python_full_version >= "3.11.1" and python_version < "4.0"
+typing-extensions==4.8.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+urllib3==2.0.7 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+uvicorn==0.23.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
